--- a/tire-catalog/i18n/es.po
+++ b/tire-catalog/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-09 11:08+0000\n"
-"PO-Revision-Date: 2018-03-09 12:13+0100\n"
+"POT-Creation-Date: 2018-03-12 08:13+0000\n"
+"PO-Revision-Date: 2018-03-12 09:17+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -182,7 +182,7 @@ msgstr "Creado por"
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_create_date
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_create_date
 msgid "Created on"
-msgstr "Creado en"
+msgstr "Creado el"
 
 #. module: tire-catalog
 #: model:ir.model.fields,field_description:tire-catalog.field_product_product_diameter
@@ -206,7 +206,7 @@ msgstr "Altura"
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_id
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_id
 msgid "ID"
-msgstr "ID (identificación)"
+msgstr "ID"
 
 #. module: tire-catalog
 #: model:ir.model.fields,field_description:tire-catalog.field_product_product_is_a_tire
@@ -223,13 +223,13 @@ msgstr "Última modificación en"
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_write_uid
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_write_uid
 msgid "Last Updated by"
-msgstr "Última actualización de"
+msgstr "Última actualización por"
 
 #. module: tire-catalog
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_write_date
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_write_date
 msgid "Last Updated on"
-msgstr "Última actualización en"
+msgstr "Última actualización el"
 
 #. module: tire-catalog
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_image
@@ -325,13 +325,13 @@ msgstr "Neumáticos"
 #: model:ir.model.fields,field_description:tire-catalog.field_product_product_width
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_width
 msgid "Width"
-msgstr "Width"
+msgstr "Anchura"
 
 #. module: tire-catalog
 #: selection:product.product,season:0
 #: selection:tire_catalog.tire_wizard,season:0
 msgid "Winter"
-msgstr "Verano"
+msgstr "Invierno"
 
 #. module: tire-catalog
 #: model:ir.model,name:tire-catalog.model_tire_catalog_tire_brand
