--- a/tire-catalog/i18n/es.po
+++ b/tire-catalog/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-12 08:13+0000\n"
-"PO-Revision-Date: 2018-03-12 09:17+0100\n"
+"POT-Creation-Date: 2018-04-10 08:48+0000\n"
+"PO-Revision-Date: 2018-04-10 10:50+0200\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -194,7 +194,7 @@ msgstr "Diámetro"
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_display_name
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_display_name
 msgid "Display Name"
-msgstr "Nombre a mostrar"
+msgstr "Nombre a Mostrar"
 
 #. module: tire-catalog
 #: model:ir.model.fields,field_description:tire-catalog.field_product_product_height
@@ -206,7 +206,7 @@ msgstr "Altura"
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_id
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_id
 msgid "ID"
-msgstr "ID"
+msgstr "ID (identificación)"
 
 #. module: tire-catalog
 #: model:ir.model.fields,field_description:tire-catalog.field_product_product_is_a_tire
@@ -223,13 +223,13 @@ msgstr "Última modificación en"
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_write_uid
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_write_uid
 msgid "Last Updated by"
-msgstr "Última actualización por"
+msgstr "Última actualización de"
 
 #. module: tire-catalog
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_write_date
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_wizard_write_date
 msgid "Last Updated on"
-msgstr "Última actualización el"
+msgstr "Última actualización en"
 
 #. module: tire-catalog
 #: model:ir.model.fields,field_description:tire-catalog.field_tire_catalog_tire_brand_image
@@ -314,7 +314,7 @@ msgstr "Marcas de Neumáticos"
 #: model:ir.actions.act_window,name:tire-catalog.action_tire_view_wizard
 #: model:ir.ui.view,arch_db:tire-catalog.tire_wizard_view_form
 msgid "Tire Wizard"
-msgstr "Tire Wizard"
+msgstr "Búsqueda de Neumáticos"
 
 #. module: tire-catalog
 #: model:ir.ui.menu,name:tire-catalog.car_tire_menu
